[tool.poetry]
name = "gopher-render"
version = "0.1.0"
description = "Render HTML and Markdown to plain text or gophermap files."
authors = ["Kevin Houlihan <kevin@crimsoncookie.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
markdown = {version = "^3.2.1"}
pygments = {version = "^2.6.1"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gopher-render = "gopher_render:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
